--- a/i18n/languages/charitable.pot
+++ b/i18n/languages/charitable.pot
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Charitable 1.6.43\n"
 "Report-Msgid-Bugs-To: https://www.wpcharitable.com/\n"
-"POT-Creation-Date: 2020-07-02 06:00:00+00:00\n"
+"POT-Creation-Date: 2020-07-08 05:09:40+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -7761,8 +7761,8 @@ msgstr ""
 #: includes/forms/class-charitable-registration-form.php:220
 #: includes/forms/class-charitable-reset-password-form.php:171
 msgid ""
-"There was an error with processing your form submission. Please reload the "
-"page and try again."
+"Unfortunately, we were unable to verify your form submission. Please reload "
+"the page and try again."
 msgstr ""
 
 #: includes/forms/class-charitable-donation-form.php:684
