--- a/i18n/languages/charitable.pot
+++ b/i18n/languages/charitable.pot
@@ -2,9 +2,9 @@
 # This file is distributed under the same license as the Charitable package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Charitable 1.6.48-beta.1\n"
+"Project-Id-Version: Charitable 1.6.48\n"
 "Report-Msgid-Bugs-To: https://www.wpcharitable.com/\n"
-"POT-Creation-Date: 2021-01-28 07:21:29+00:00\n"
+"POT-Creation-Date: 2021-05-11 02:50:10+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
